WQXR-194 fix nav gradient on mobile

--- a/app/styles/mixins/_layout.scss
+++ b/app/styles/mixins/_layout.scss
@@ -24,6 +24,6 @@
     top: 0;
     height: 100%;
     width: 15%;
-    background-image: linear-gradient(to right, rgba(0, 100, 180, 0.0), $wqxrdarkblue);
+    background-image: linear-gradient(to right, rgba(0, 100, 180, 0.0), $wqxrdarkdarkblue);
   }
 }
